# dirsystem

./: CMakeLists.txt
example/: example.cpp
include/dirsystem/: app_dirs.h  dirs.h  dirsystem.h  plain_dirs.h  portable_app_dirs.h  types.h  util.h
src/: app_dirs.cpp  dirsystem.cpp  plain_dirs.cpp  portable_app_dirs.cpp  util.cpp
